# rust_sqlx_test

./: .envrc  Cargo.toml
src/: main.rs
