[package]
name = "rust_db_test"
version = "0.1.0"
authors = ["Vinícius Simões <vinicius.simoes95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.5.0", features = ["full"] }
